--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/list/item.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/list/item.phtml
@@ -143,7 +143,7 @@ if ($product) {
                         </div>
                     </template>
                 <?php endif ?>
-                <?= $template->setData(['product' => $product])->render('Magento_Catalog::/product/list/discount-badge.phtml') ?>
+                <?= $template->setData(['product' => $product, 'class' => 'py-1 bottom left'])->render('Magento_Catalog::product/list/discount-badge.phtml') ?>
             </div>
 
             <div class="relative flex flex-1 flex-col">
