--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-info.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-info.phtml
@@ -40,11 +40,12 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
 
 <!-- Price -->
 <div class="animate-on-transition px-4 ps-2 leading-tight z-10 md:px-0 max-md:absolute max-md:right-0 <?= $block->getChildHtml("product.info.price") === '' ? '' : 'md:mb-8' ?>" x-ref="ProductPrice">
-  <div role="group" aria-label="<?= $escaper->escapeHtmlAttr('Price') ?>">
+  <div role="group" class="flex gap-2 items-center" aria-label="<?= $escaper->escapeHtmlAttr('Price') ?>">
     <?= $block->getChildHtml("product.info.price") ?>
     <?php if ($productType === 'bundle'): ?>
       <span class="sr-only"><?= $escaper->escapeHtml(__('The price depends on the chosen options')) ?></span>
     <?php endif; ?>
+    <?= $template->setData(['product' => $product, 'class' => 'ms-3 static max-md:hidden !bg-secondary-500'])->render('Magento_Catalog::product/list/discount-badge.phtml') ?>
   </div>
 </div>
 
